--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   background-repeat: no-repeat;
 }
 
-.landing-page__first-section, .button-container, .landing-page__second-section, .landing-page__third-section, .landing-page__fourth-section, .landing-page__specs-container, .landing-page__fifth-section, .landing-page__sixth-section {
+.landing-page__first-section, .button-container, .landing-page__second-section, .landing-page__third-section, .landing-page__fourth-section, .landing-page__fourth-section-container, .landing-page__fifth-section, .landing-page__sixth-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -165,23 +165,19 @@
   margin: 65px 32px 40px;
 }
 
-.landing-page__fifth-section:nth-child(1) {
+.google-logo, .microsoft-logo {
   width: 135px;
 }
 
-.landing-page__fifth-section:nth-child(2) {
+.ibm-logo {
   width: 115px;
 }
 
-.landing-page__fifth-section:nth-child(3) {
-  width: 135px;
-}
-
-.landing-page__fifth-section:nth-child(4) {
+.hp-logo {
   width: 113px;
 }
 
-.landing-page__fifth-section:nth-child(5) {
+.vector-graphics-logo {
   width: 105px;
 }
 
